# docs/swagger.json
@@ -4,9 +4,12 @@
         "contact": {}
     },
     "paths": {
-        "/balance/get_balance/{user_id}": {
+        "/balance/get_balance": {
             "get": {
                 "description": "Возвращает баланс пользователя по его id",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -16,24 +19,54 @@
                 "summary": "Получение баланса пользователя",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "id пользователя",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
+                        "description": "Входные параметры",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/avito2022_internal_app_api.UserID"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_app_api.Balance"
+                            "$ref": "#/definitions/avito2022_internal_app_api.Balance"
                         }
                     }
                 }
             }
         },
-        "/balance/up_balance/{user_id}": {
+        "/balance/reserve_money": {
+            "post": {
+                "description": "Резервирование средств с основного баланса на отдельном счете",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sales"
+                ],
+                "summary": "Резервирование средств",
+                "parameters": [
+                    {
+                        "description": "Входные параметры",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_app_api.Reserve"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/balance/up_balance": {
             "post": {
                 "description": "Пополняет баланс пользователя или создаёт его при первом пополнении",
                 "consumes": [
@@ -45,19 +78,12 @@
                 "summary": "Пополнение или инициализация баланса",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "id пользователя",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Входные параметры",
                         "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_app_api.BalanceReplenishment"
+                            "$ref": "#/definitions/avito2022_internal_app_api.BalanceReplenishment"
                         }
                     }
                 ],
@@ -83,6 +109,37 @@
             "properties": {
                 "replenishment": {
                     "type": "number"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "avito2022_internal_app_api.Reserve": {
+            "type": "object",
+            "properties": {
+                "cost": {
+                    "type": "number"
+                },
+                "order_id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "avito2022_internal_app_api.UserID": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -99,6 +156,37 @@
             "properties": {
                 "replenishment": {
                     "type": "number"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internal_app_api.Reserve": {
+            "type": "object",
+            "properties": {
+                "cost": {
+                    "type": "number"
+                },
+                "order_id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internal_app_api.UserID": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         }
